--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-tsparticles": "^2.1.3",
     "react-typical": "^0.1.3",
     "swiper": "^8.1.4",
+    "vara": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,7 +48,7 @@
     ]
   },
   "devDependencies": {
-    "tsparticles": "^2.1.3",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "tsparticles": "^2.1.3"
   }
 }
