--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-aamrah",
-  "homepage": "https://Nahuel61920.github.io/portafolio-Nahuel/",
+  "homepage": "https://aamrahms.github.io/portafolio/",
   "version": "1.5.0",
   "private": true,
   "dependencies": {
